--- a/FrontEnd_Bankati/src/app/admin/admin.component.css
+++ b/FrontEnd_Bankati/src/app/admin/admin.component.css
@@ -433,3 +433,20 @@ input.short, select.short {
 .view-button:hover {
   background-color: #0056b3;
 }
+.spinner {
+  width: 20px;
+  height: 20px;
+  border: 3px solid transparent;
+  border-top-color: white;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
