--- a/FrontEnd_Bankati/src/app/create-client/create-client.component.css
+++ b/FrontEnd_Bankati/src/app/create-client/create-client.component.css
@@ -510,3 +510,20 @@ label {
   margin-bottom: 15px;
   font-weight: bold;
 }
+.spinner {
+  width: 20px;
+  height: 20px;
+  border: 3px solid transparent;
+  border-top-color: white;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
