id ajouté en reponse

--- a/FrontEnd_Bankati/src/app/dashboard/dashboard.component.html
+++ b/FrontEnd_Bankati/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,11 @@
               style="color: white"></i> Creancier</a>
         </li>
         <li><i class="fas fa-user" style="color: white"></i> Profile</li>
-        <li><i class="fas fa-sign-out-alt" style="color: white"></i> Logout</li>
+        <li class="nav-item">
+          <button class="nav-link" (click)="logout()">
+            <i class="fas fa-sign-out-alt" style="color: white"></i> Logout
+          </button>
+        </li>
       </ul>
     </div>
   </div>
