--- a/FrontEnd_Bankati/src/app/dashboard/dashboard.component.css
+++ b/FrontEnd_Bankati/src/app/dashboard/dashboard.component.css
@@ -169,3 +169,28 @@ i {
   color: white;
   font-size: 1.5em;
 }
+/* Style spécifique pour le bouton */
+.sidebar .nav-item {
+  margin-left: -7px;
+}
+
+.sidebar .nav-item button.nav-link {
+  margin-left: 0px;
+  background: none;  /* Aucune couleur de fond */
+  border: none;      /* Supprimer la bordure */
+  padding: 10px; /* Padding similaire à la taille du li */
+  width: 100%;        /* Pour occuper toute la largeur disponible */
+  text-align: left;   /* Alignement à gauche du texte */
+  color: white;       /* Texte en blanc */
+  font-size: 0.9em;     /* Taille de la police */
+  display: flex;      /* Utiliser flexbox pour aligner l'icône et le texte */
+  align-items: center; /* Centrer verticalement l'icône et le texte */
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.sidebar .nav-item button.nav-link i {
+  margin-left: 0px;
+  margin-right: 15px; /* Espace entre l'icône et le texte */
+  font-size: 1.2em;   /* Augmenter la taille de l'icône */
+}
+
